--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: #333;
+}
+
 /* ===== GLOBAL RESET ===== */
 * {
   box-sizing: border-box;
